--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -38,9 +38,12 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-form": "1.2.2",
-    "@tanstack/react-router": "^1.102.1",
+    "@tanstack/react-router": "^1.131.27",
+    "@tanstack/react-router-devtools": "^1.131.27",
+    "@tanstack/react-start": "^1.131.27",
     "@tanstack/react-store": "^0.7.0",
     "@tanstack/react-table": "^8.21.2",
     "class-variance-authority": "^0.7.1",
@@ -56,12 +59,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
-    "@tailwindcss/vite": "4.0.4",
     "@tanstack/router-plugin": "^1.102.2",
+    "@tailwindcss/vite": "^4.1.12",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "typescript": "^5.7.2",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.19.0",
@@ -69,11 +73,11 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "jsdom": "^26.0.0",
-    "postcss": "^8.5.1",
+    "postcss": "^8.5.6",
     "rollup-plugin-visualizer": "^5.14.0",
     "tailwindcss": "4.0.4",
     "terser": "5.39.0",
-    "vite": "6.1.0",
+    "vite": "6.3.5",
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "^2.0.5"
   },
