--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -25,6 +25,7 @@
     "@effect/rpc": "*",
     "@headlessui/react": "^2.2.1",
     "@org/domain": "workspace:^",
+    "@org/server": "workspace:^",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.11",
