--- a/packages/client/tsconfig.app.json
+++ b/packages/client/tsconfig.app.json
@@ -24,7 +24,9 @@
     "paths": {
       "@/*": ["./src/*"],
       "@org/domain": ["../domain/src/index.js"],
-      "@org/domain/*": ["../domain/src/*.js"]
+      "@org/domain/*": ["../domain/src/*.js"],
+      "@org/server": ["../server/src/index.js"],
+      "@org/server/*": ["../server/src/*.js"]
     }
   },
   "include": ["src", "prettier.config.js"],
