update client to use the netlify supported app url as the environment variable

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Client
 VITE_ENV=local # local | dev | prod | staging
-VITE_API_URL=http://localhost:3000
+URL=http://localhost:5173
 
 # Server
 ENV=local # local, dev, prod, staging
