--- a/netlify.toml
+++ b/netlify.toml
@@ -1,54 +1,2 @@
 [build]
-# Build command for the client application
-command = "export VITE_DEPLOY_URL=$URL && echo 'Setting VITE_DEPLOY_URL to:' $VITE_DEPLOY_URL && pnpm build"
-
-# Directory to publish (the built client application)
-publish = "packages/client/dist"
-
-# Environment variables available during build
-[build.environment]
-
-# Set Node.js version
-NODE_VERSION = "22.14.0"
-
-# Redirects and rewrites for SPA routing
-[[redirects]]
-from = "/*"
-to = "/index.html"
-status = 200
-
-# Don't redirect API calls or static assets
-conditions = { Role = ["admin"], Country = ["US"] }
-force = false
-
-# Headers for security and performance
-[[headers]]
-for = "/*"
-[headers.values]
-X-Frame-Options = "DENY"
-X-XSS-Protection = "1; mode=block"
-X-Content-Type-Options = "nosniff"
-Referrer-Policy = "strict-origin-when-cross-origin"
-
-[[headers]]
-for = "/static/*"
-[headers.values]
-Cache-Control = "public, max-age=31536000, immutable"
-
-# Environment-specific settings
-[context.production]
-[context.production.environment]
-VITE_ENV = "prod"
-
-[context.deploy-preview]
-[context.deploy-preview.environment]
-VITE_ENV = "staging"
-
-[context.branch-deploy]
-[context.branch-deploy.environment]
-VITE_ENV = "staging"
-
-# Development context
-[context.dev]
-[context.dev.environment]
-VITE_ENV = "dev"
+command = "export VITE_DEPLOY_URL=$URL && pnpm build"
