adding the quiz feature

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Client
 VITE_ENV=local # local | dev | prod | staging
-URL=http://localhost:5173
+VITE_API_URL=http://localhost:5173
 
 # Server
 ENV=local # local, dev, prod, staging
