--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -52,7 +52,8 @@
     "@org/domain": "workspace:^",
     "@testcontainers/postgresql": "^10.28.0",
     "effect": "*",
-    "pg": "8.13.1"
+    "pg": "8.13.1",
+    "slugify": "^1.6.6"
   },
   "effect": {
     "generateExports": {
