more quiz progress

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -36,7 +36,8 @@
     "@effect/platform-node": "*",
     "@effect/sql": "*",
     "@effect/sql-pg": "*",
-    "@effect/cli": "*"
+    "@effect/cli": "*",
+    "@org/domain": "workspace:^"
   },
   "effect": {
     "generateExports": {
