--- a/packages/client/components.json
+++ b/packages/client/components.json
@@ -5,15 +5,16 @@
   "tsx": true,
   "tailwind": {
     "config": "",
-    "css": "src/index.css",
+    "css": "src/styles/app.css",
     "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
   },
   "aliases": {
-    "components": "/packages/client/src/components",
+    "@": "src",
+    "components": "@/components",
     "utils": "@/lib/utils/cn",
-    "ui": "@/lib/components/ui",
+    "ui": "@/components/ui",
     "lib": "@/lib",
     "hooks": "@/lib/hooks"
   },
