trying to figure out seeding

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -37,7 +37,8 @@
     "@effect/sql": "*",
     "@effect/sql-pg": "*",
     "@effect/cli": "*",
-    "@org/domain": "workspace:^"
+    "@org/domain": "workspace:^",
+    "@org/server": "workspace:^"
   },
   "effect": {
     "generateExports": {
