--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -1,5 +1,15 @@
 {
   "extends": "../../tsconfig.base.json",
   "include": [],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@org/domain": ["../domain/src/index.js"],
+      "@org/domain/*": ["../domain/src/*.js"],
+      "@org/database": ["../database/src/index.js"],
+      "@org/database/*": ["../database/src/*.js"]
+    }
+  },
   "references": [{ "path": "tsconfig.src.json" }, { "path": "tsconfig.test.json" }]
 }
