--- a/packages/database/tsconfig.src.json
+++ b/packages/database/tsconfig.src.json
@@ -5,6 +5,15 @@
     "types": ["node"],
     "outDir": "build/src",
     "tsBuildInfoFile": ".tsbuildinfo/src.tsbuildinfo",
-    "rootDir": "src"
+    "rootDir": "src",
+
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@org/domain": ["../domain/src/index.js"],
+      "@org/domain/*": ["../domain/src/*.js"],
+      "@org/database": ["../database/src/index.js"],
+      "@org/database/*": ["../database/src/*.js"]
+    }
   }
 }
