--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@ stats.html
 
 .aider*
 .gitai/
+
+
+.nx/cache
+.nx/workspace-data
+.cursor/rules/nx-rules.mdc
+.github/instructions/nx.instructions.md
