--- a/packages/client-core/package.json
+++ b/packages/client-core/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "@org/client",
+  "name": "@org/client-core",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/lucas-barake/rpc-tutorial.git",
-    "directory": "packages/client"
+    "directory": "packages/client-core"
+  },
+  "exports": {
+    ".": "./src/index.ts",
+    "./package.json": "./package.json",
+    "./*": "./src/*.ts"
   },
   "scripts": {
     "dev": "dotenv -e ../../.env vite",
@@ -28,7 +33,6 @@
     "@hookform/resolvers": "^5.2.1",
     "@org/domain": "workspace:^",
     "@org/server": "workspace:^",
-    "@org/client-core": "workspace:^",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
