--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,6 +5,7 @@
     { "path": "packages/domain/tsconfig.build.json" },
     { "path": "packages/database/tsconfig.build.json" },
     { "path": "packages/client/tsconfig.build.json" },
-    { "path": "packages/server/tsconfig.build.json" }
+    { "path": "packages/server/tsconfig.build.json" },
+    { "path": "packages/client-core/tsconfig.build.json" }
   ]
 }
