--- a/packages/client-core/tsconfig.json
+++ b/packages/client-core/tsconfig.json
@@ -1,9 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "composite": false,
-    "declaration": false,
-    "declarationMap": false
+    "composite": true
   },
   "include": [],
   "files": [],
