--- a/packages/ui/shadcn/package.json
+++ b/packages/ui/shadcn/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "@org/client",
-  "private": true,
+  "name": "@org/shadcn",
   "version": "0.0.0",
   "type": "module",
+  "license": "MIT",
+  "description": "The domain template",
   "repository": {
     "type": "git",
     "url": "https://github.com/lucas-barake/rpc-tutorial.git",
-    "directory": "packages/client"
+    "directory": "packages/domain"
+  },
+  "publishConfig": {
+    "access": "public",
+    "directory": "dist"
+  },
+  "exports": {
+    ".": "./src/index.ts",
+    "./package.json": "./package.json",
+    "./*": "./src/*.ts"
   },
   "scripts": {
-    "dev": "dotenv -e ../../.env vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "typecheck": "tsc --noEmit",
-    "format": "prettier --write .",
-    "prepare": "husky",
-    "test": "vitest"
+    "build": "tsc -b tsconfig.build.json",
+    "build-annotate": "babel build/esm --plugins annotate-pure-calls --out-dir build/esm --source-maps",
+    "check": "tsc -b tsconfig.json",
+    "test": "vitest --run",
+    "coverage": "vitest --coverage"
   },
   "dependencies": {
     "@effect-atom/atom-react": "*",
@@ -26,10 +33,6 @@
     "@faker-js/faker": "^10.0.0",
     "@headlessui/react": "^2.2.1",
     "@hookform/resolvers": "^5.2.1",
-    "@org/domain": "workspace:^",
-    "@org/server": "workspace:^",
-    "@org/client-core": "workspace:^",
-    "@org/shadcn": "workspace:^",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -87,6 +90,7 @@
     "zod": "^4.1.3"
   },
   "devDependencies": {
+    "@effect/build-utils": "^0.8.3",
     "@eslint/js": "^9.19.0",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/router-plugin": "^1.102.2",
@@ -120,14 +124,6 @@
       "include": [
         "**/*.ts"
       ]
-    }
-  },
-  "peerDependencies": {
-    "typescript": "*"
-  },
-  "overrides": {
-    "overrides": {
-      "react-is": "^19.0.0-rc-69d4b800-20241021"
     }
   }
 }
