--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,6 +6,7 @@
     { "path": "packages/database/tsconfig.build.json" },
     { "path": "packages/client/tsconfig.build.json" },
     { "path": "packages/server/tsconfig.build.json" },
-    { "path": "packages/client-core/tsconfig.build.json" }
+    { "path": "packages/client-core/tsconfig.build.json" },
+    { "path": "packages/ui/shadcn/tsconfig.build.json" }
   ]
 }
