--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     { "path": "packages/server" },
     { "path": "packages/client" },
     { "path": "packages/database" },
-    { "path": "packages/client-core" }
+    { "path": "packages/client-core" },
+    { "path": "packages/ui/shadcn" }
   ]
 }
