mid-refactor quiz package

--- a/apps/my-artist-type/domain/package.json
+++ b/apps/my-artist-type/domain/package.json
@@ -29,6 +29,7 @@
     "@effect/platform": "*",
     "@core/domain": "workspace:^",
     "@core/client": "workspace:^",
+    "@features/quiz": "workspace:^",
     "@effect/rpc": "*",
     "@faker-js/faker": "^10.0.0",
     "effect": "*"
