--- a/apps/my-artist-type/domain/tsconfig.json
+++ b/apps/my-artist-type/domain/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "extends": "../../../tsconfig.base.json",
   "include": [],
-  "references": [{ "path": "tsconfig.src.json" }, { "path": "tsconfig.test.json" }]
+  "references": [{ "path": "tsconfig.src.json" }, { "path": "tsconfig.test.json" }],
+  "compilerOptions": {
+    "paths": {
+      "@features/quiz": ["../../../packages/features/quiz/src/index.js"],
+      "@features/quiz/*": ["../../../packages/features/quiz/src/*.js"]
+    }
+  }
 }
