--- a/apps/my-artist-type/web/package.json
+++ b/apps/my-artist-type/web/package.json
@@ -26,6 +26,7 @@
     "@faker-js/faker": "^10.0.0",
     "@headlessui/react": "^2.2.1",
     "@hookform/resolvers": "^5.2.1",
+    "@features/quiz": "workspace:^",
     "@my-artist-type/domain": "workspace:^",
     "@my-artist-type/server": "workspace:^",
     "@core/client": "workspace:^",
