--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "clean": "node scripts/clean.mjs",
-    "build": "pnpm --filter @my-artist-type/domain build && pnpm --filter @my-artist-type/database build && pnpm --filter @org/client build && pnpm --filter @org/server build",
+    "build": "pnpm --filter @my-artist-type/domain build && pnpm --filter @my-artist-type/database build && pnpm --filter @my-artist-type/web build && pnpm --filter @my-artist-type/server build",
     "check": "tsc -b tsconfig.json",
     "check:recursive": "pnpm --recursive exec tsc -b tsconfig.json",
     "check:fast": "pnpm lint && pnpm check",
