--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     { "path": "packages/core/client" },
     { "path": "packages/core/server" },
     { "path": "packages/core/database" },
-    { "path": "packages/ui/shadcn" }
+    { "path": "packages/ui/shadcn" },
+    { "path": "packages/features/quiz" }
   ]
 }
