--- a/packages/features/quiz/tsconfig.src.json
+++ b/packages/features/quiz/tsconfig.src.json
@@ -6,6 +6,15 @@
     { "path": "../../core/database/tsconfig.src.json" }
   ],
   "compilerOptions": {
+    "jsx": "react-jsx",
+    "lib": ["ES2021", "DOM", "DOM.Iterable"],
+    "target": "ES2021",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "isolatedModules": true,
+    "moduleDetection": "force",
+    "resolveJsonModule": true,
     "types": ["node"],
     "outDir": "build/src",
     "tsBuildInfoFile": ".tsbuildinfo/src.tsbuildinfo",
