--- a/packages/features/quiz/package.json
+++ b/packages/features/quiz/package.json
@@ -27,7 +27,28 @@
     "coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@effect/ai": "*",
+    "@effect/ai-anthropic": "*",
+    "@effect/ai-openai": "*",
+    "@effect/cluster": "*",
+    "@effect/experimental": "*",
+    "@effect/opentelemetry": "*",
+    "@effect/platform-node": "*",
+    "@effect/sql": "*",
+    "@effect/sql-pg": "*",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.57.1",
+    "@opentelemetry/resources": "*",
+    "@opentelemetry/sdk-trace-base": "*",
+    "@opentelemetry/sdk-trace-node": "*",
+    "@opentelemetry/semantic-conventions": "*",
+    "@my-artist-type/database": "workspace:^",
+    "@testcontainers/postgresql": "^10.28.0",
+    "pg": "8.13.1",
+    "slugify": "^1.6.6",
+    "@core/client": "workspace:^",
+    "@core/database": "workspace:^",
     "@core/domain": "workspace:^",
+    "@core/server": "workspace:^",
     "@effect-atom/atom-react": "*",
     "@effect/platform": "*",
     "@effect/platform-browser": "*",
@@ -38,7 +59,6 @@
     "@features/quiz": "workspace:^",
     "@my-artist-type/domain": "workspace:^",
     "@my-artist-type/server": "workspace:^",
-    "@core/client": "workspace:^",
     "@org/shadcn": "workspace:^",
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/typography": "^0.5.16",
@@ -71,6 +91,9 @@
     }
   },
   "devDependencies": {
+    "@types/pg": "^8.11.11",
+    "madge": "8.0.0",
+    "tsx": "^4.19.2",
     "@effect/build-utils": "^0.8.3",
     "@eslint/js": "^9.19.0",
     "@tailwindcss/vite": "^4.1.12",
