fixing build issues

--- a/packages/core/database/package.json
+++ b/packages/core/database/package.json
@@ -33,8 +33,7 @@
     "@effect/platform-node": "*",
     "@effect/sql": "*",
     "@effect/sql-pg": "*",
-    "@effect/cli": "*",
-    "@my-artist-type/domain": "workspace:^"
+    "@effect/cli": "*"
   },
   "effect": {
     "generateExports": {
