--- a/packages/features/quiz/package.json
+++ b/packages/features/quiz/package.json
@@ -57,6 +57,7 @@
     "@headlessui/react": "^2.2.1",
     "@hookform/resolvers": "^5.2.1",
     "@my-artist-type/server": "workspace:^",
+    "@my-artist-type/domain": "workspace:^",
     "@org/shadcn": "workspace:^",
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/typography": "^0.5.16",
