--- a/packages/features/quiz/tsconfig.src.json
+++ b/packages/features/quiz/tsconfig.src.json
@@ -9,10 +9,11 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "lib": ["ES2021", "DOM", "DOM.Iterable"],
-    "target": "ES2021",
-    "module": "ESNext",
-    "moduleResolution": "bundler",
+    "target": "ES2022",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "allowImportingTsExtensions": false,
+    "verbatimModuleSyntax": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "resolveJsonModule": true,
