--- a/packages/core/server/package.json
+++ b/packages/core/server/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@effect/ai": "*",
+    "@core/database": "workspace:^",
     "@effect/ai-anthropic": "*",
     "@effect/ai-openai": "*",
     "@effect/cluster": "*",
