--- a/packages/features/quiz/tsconfig.src.json
+++ b/packages/features/quiz/tsconfig.src.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../../tsconfig.base.json",
-  "include": ["src"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.json"],
   "references": [
     { "path": "../../core/domain/tsconfig.src.json" },
     { "path": "../../core/database/tsconfig.src.json" },
