adding gui updates and state management with effect atom

--- a/packages/features/quiz/tsconfig.src.json
+++ b/packages/features/quiz/tsconfig.src.json
@@ -4,7 +4,8 @@
   "references": [
     { "path": "../../core/domain/tsconfig.src.json" },
     { "path": "../../core/database/tsconfig.src.json" },
-    { "path": "../../core/server/tsconfig.src.json" }
+    { "path": "../../core/server/tsconfig.src.json" },
+    { "path": "../../ui/shadcn/tsconfig.src.json" }
   ],
   "compilerOptions": {
     "jsx": "react-jsx",
