--- a/packages/ui/shadcn/tsconfig.build.json
+++ b/packages/ui/shadcn/tsconfig.build.json
@@ -4,6 +4,7 @@
     "types": ["node"],
     "tsBuildInfoFile": ".tsbuildinfo/build.tsbuildinfo",
     "outDir": "build/esm",
+    "declaration": true,
     "declarationDir": "build/dts",
     "stripInternal": true
   }
