--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,9 +2,9 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "Server",
+      "label": "Web",
       "type": "shell",
-      "command": "nix develop -c $SHELL -c 'pnpm --filter server dev'",
+      "command": "nix develop -c $SHELL -c 'pnpm --filter web dev'",
       "problemMatcher": [],
       "presentation": {
         "panel": "new",
@@ -12,25 +12,7 @@
         "echo": true
       },
       "options": {
-        "cwd": "${workspaceFolder}/packages/server"
-      },
-      "icon": {
-        "id": "server-process",
-        "color": "terminal.ansiBlue"
-      }
-    },
-    {
-      "label": "Client",
-      "type": "shell",
-      "command": "nix develop -c $SHELL -c 'pnpm --filter client dev'",
-      "problemMatcher": [],
-      "presentation": {
-        "panel": "new",
-        "reveal": "always",
-        "echo": true
-      },
-      "options": {
-        "cwd": "${workspaceFolder}/packages/client"
+        "cwd": "${workspaceFolder}/apps/my-artist-type/web"
       },
       "icon": {
         "id": "browser",
@@ -39,7 +21,7 @@
     },
     {
       "label": "Start Workspace",
-      "dependsOn": ["Server", "Client"],
+      "dependsOn": ["Web"],
       "problemMatcher": [],
       "group": {
         "kind": "build",
