--- a/packages/ui/shadcn/tsconfig.src.json
+++ b/packages/ui/shadcn/tsconfig.src.json
@@ -12,15 +12,14 @@
     "lib": ["ES2021", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "declaration": false,
-    "declarationMap": false,
-    "composite": false,
+    "declaration": true,
+    "declarationMap": true,
+    "composite": true,
 
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
-    "noEmit": true,
+    "noEmit": false,
     "jsx": "react-jsx",
     "paths": {
       "@/*": ["./src/*"]
