--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -13,6 +13,7 @@
     { "path": "packages/core/server/tsconfig.build.json" },
 
     { "path": "packages/ui/shadcn/tsconfig.build.json" },
+    { "path": "packages/ui/aceternity/tsconfig.build.json" },
 
     { "path": "packages/features/quiz/tsconfig.build.json" }
   ]
