--- a/packages/features/quiz/package.json
+++ b/packages/features/quiz/package.json
@@ -56,7 +56,7 @@
     "@faker-js/faker": "^10.0.0",
     "@headlessui/react": "^2.2.1",
     "@hookform/resolvers": "^5.2.1",
-    "@org/shadcn": "workspace:^",
+    "@ui/shadcn": "workspace:^",
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-form": "1.2.2",
