--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -63,15 +63,7 @@
 
       "@my-artist-type/database": ["./apps/my-artist-type/database/src/index.js"],
       "@my-artist-type/database/*": ["./apps/my-artist-type/database/src/*.js"],
-      "@my-artist-type/database/test/*": ["./apps/my-artist-type/database/test/*.js"],
-
-      "@org/ui/shadcn": ["./packages/ui/shadcn/src/index.js"],
-      "@org/ui/shadcn/*": ["./packages/ui/shadcn/src/*.js"],
-      "@org/ui/shadcn/test/*": ["./packages/ui/shadcn/test/*.js"],
-
-      "@features/quiz/": ["./packages/features/quiz/src/index.js"],
-      "@features/quiz/*": ["./packages/features/quiz/src/*.js"],
-      "@features/quiz/test/*": ["./packages/features/quiz/test/*.js"]
+      "@my-artist-type/database/test/*": ["./apps/my-artist-type/database/test/*.js"]
     }
   }
 }
