adding a lot of UI tweaks

--- a/apps/my-artist-type/web/package.json
+++ b/apps/my-artist-type/web/package.json
@@ -28,9 +28,11 @@
     "@hookform/resolvers": "^5.2.1",
     "@features/quiz": "workspace:^",
     "@my-artist-type/domain": "workspace:^",
+    "react-wrap-balancer": "^1.1.1",
     "@my-artist-type/server": "workspace:^",
     "@core/client": "workspace:^",
     "@ui/shadcn": "workspace:^",
+    "@ui/aceternity": "workspace:^",
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-form": "1.2.2",
