--- a/packages/features/quiz/package.json
+++ b/packages/features/quiz/package.json
@@ -56,6 +56,7 @@
     "@faker-js/faker": "^10.0.0",
     "@headlessui/react": "^2.2.1",
     "@hookform/resolvers": "^5.2.1",
+    "recharts": "^2.15.4",
     "@ui/shadcn": "workspace:^",
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/typography": "^0.5.16",
