general refactor to Effect Atom and adding response state

--- a/package.json
+++ b/package.json
@@ -36,6 +36,23 @@
     "@babel/core": "^7.26.0",
     "@babel/plugin-transform-export-namespace-from": "^7.25.9",
     "@babel/plugin-transform-modules-commonjs": "^7.25.9",
+    "@effect-atom/atom-react": "0.1.15",
+    "@effect/ai": "0.25.2",
+    "@effect/ai-anthropic": "0.15.1",
+    "@effect/ai-openai": "0.28.2",
+    "@effect/cli": "0.69.0",
+    "@effect/cluster": "0.47.0",
+    "@effect/eslint-plugin": "0.3.2",
+    "@effect/experimental": "0.54.5",
+    "@effect/language-service": "0.35.2",
+    "@effect/opentelemetry": "0.56.1",
+    "@effect/platform": "0.90.1",
+    "@effect/platform-browser": "0.70.0",
+    "@effect/platform-node": "0.95.0",
+    "@effect/rpc": "0.68.3",
+    "@effect/sql": "0.44.1",
+    "@effect/sql-pg": "0.45.0",
+    "@effect/vitest": "0.25.0",
     "@eslint/compat": "1.2.2",
     "@eslint/eslintrc": "3.1.0",
     "@eslint/js": "9.13.0",
@@ -44,6 +61,8 @@
     "@typescript-eslint/parser": "8.14.0",
     "@vitest/coverage-v8": "2.1.9",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
+    "dotenv-cli": "^10.0.0",
+    "effect": "3.17.7",
     "eslint": "9.13.0",
     "eslint-import-resolver-typescript": "^3.10.0",
     "eslint-plugin-codegen": "^0.29.0",
@@ -56,6 +75,7 @@
     "glob": "^11.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
+    "nx": "21.4.1",
     "prettier": "3.4.2",
     "prettier-plugin-embed": "^0.5.0",
     "prettier-plugin-organize-imports": "4.1.0",
@@ -64,27 +84,7 @@
     "read-package-up": "11.0.0",
     "tsx": "^4.19.2",
     "typescript": "^5.8.2",
-    "vitest": "3.1.1",
-    "effect": "3.17.7",
-    "@effect/platform": "0.90.1",
-    "@effect/platform-browser": "0.70.0",
-    "@effect/platform-node": "0.95.0",
-    "@effect/experimental": "0.54.5",
-    "@effect/opentelemetry": "0.56.1",
-    "@effect/cluster": "0.47.0",
-    "@effect/sql": "0.44.1",
-    "@effect/sql-pg": "0.45.0",
-    "@effect/eslint-plugin": "0.3.2",
-    "@effect/language-service": "0.35.2",
-    "@effect/vitest": "0.25.0",
-    "@effect/rpc": "0.68.3",
-    "@effect/ai": "0.25.2",
-    "@effect/ai-openai": "0.28.2",
-    "@effect/ai-anthropic": "0.15.1",
-    "@effect-atom/atom-react": "0.1.15",
-    "@effect/cli": "0.69.0",
-    "dotenv-cli": "^10.0.0",
-    "nx": "21.4.1"
+    "vitest": "3.1.1"
   },
   "pnpm": {
     "overrides": {
@@ -118,6 +118,7 @@
     }
   },
   "dependencies": {
+    "@niklaserik/effect-mcp": "^1.0.7",
     "tailwindcss": "4.0.4"
   }
 }
