--- a/packages/features/quiz/package.json
+++ b/packages/features/quiz/package.json
@@ -29,37 +29,37 @@
     "coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@core/client": "workspace:^",
+    "@core/database": "workspace:^",
+    "@core/domain": "workspace:^",
+    "@core/server": "workspace:^",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@effect-atom/atom-react": "*",
     "@effect/ai": "*",
     "@effect/ai-anthropic": "*",
     "@effect/ai-openai": "*",
     "@effect/cluster": "*",
     "@effect/experimental": "*",
     "@effect/opentelemetry": "*",
+    "@effect/platform": "*",
+    "@effect/platform-browser": "*",
     "@effect/platform-node": "*",
+    "@effect/rpc": "*",
     "@effect/sql": "*",
     "@effect/sql-pg": "*",
+    "@faker-js/faker": "^10.0.0",
+    "@headlessui/react": "^2.2.1",
+    "@hookform/resolvers": "^5.2.1",
+    "@my-artist-type/database": "workspace:^",
     "@opentelemetry/exporter-trace-otlp-http": "^0.57.1",
     "@opentelemetry/resources": "*",
     "@opentelemetry/sdk-trace-base": "*",
     "@opentelemetry/sdk-trace-node": "*",
     "@opentelemetry/semantic-conventions": "*",
-    "@my-artist-type/database": "workspace:^",
-    "@testcontainers/postgresql": "^10.28.0",
-    "pg": "8.13.1",
-    "slugify": "^1.6.6",
-    "@core/client": "workspace:^",
-    "@core/database": "workspace:^",
-    "@core/domain": "workspace:^",
-    "@core/server": "workspace:^",
-    "@effect-atom/atom-react": "*",
-    "@effect/platform": "*",
-    "@effect/platform-browser": "*",
-    "@effect/rpc": "*",
-    "@faker-js/faker": "^10.0.0",
-    "@headlessui/react": "^2.2.1",
-    "@hookform/resolvers": "^5.2.1",
-    "recharts": "^2.15.4",
-    "@ui/shadcn": "workspace:^",
+    "@tabler/icons-react": "^3.34.1",
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-form": "1.2.2",
@@ -67,16 +67,24 @@
     "@tanstack/react-router-devtools": "^1.131.27",
     "@tanstack/react-start": "^1.131.27",
     "@tanstack/react-store": "^0.7.0",
-    "@tanstack/react-table": "^8.21.2",
+    "@tanstack/react-table": "^8.21.3",
+    "@testcontainers/postgresql": "^10.28.0",
+    "@ui/shadcn": "workspace:^",
+    "culori": "^4.0.2",
     "effect": "*",
     "lucide-react": "^0.469.0",
     "motion": "^12.18.1",
+    "pg": "8.13.1",
     "react": "19.0.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.0.0",
     "react-resizable-panels": "^3.0.5",
+    "recharts": "^2.15.4",
+    "slugify": "^1.6.6",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.3"
   },
   "effect": {
     "generateExports": {
@@ -91,15 +99,14 @@
     }
   },
   "devDependencies": {
-    "@types/pg": "^8.11.11",
-    "madge": "8.0.0",
-    "tsx": "^4.19.2",
     "@effect/build-utils": "^0.8.3",
     "@eslint/js": "^9.19.0",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/router-plugin": "^1.102.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@types/culori": "^4.0.1",
+    "@types/pg": "^8.11.11",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
@@ -109,10 +116,12 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "jsdom": "^26.0.0",
+    "madge": "8.0.0",
     "postcss": "^8.5.6",
     "rollup-plugin-visualizer": "^5.14.0",
     "tailwindcss": "4.0.4",
     "terser": "5.39.0",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "vite": "6.3.5",
     "vite-tsconfig-paths": "5.1.4",
