--- a/packages/ui/shadcn/package.json
+++ b/packages/ui/shadcn/package.json
@@ -23,7 +23,6 @@
   },
   "dependencies": {
     "@effect-atom/atom-react": "*",
-    "@tabler/icons-react": "^3.34.1",
     "@effect/platform": "*",
     "@effect/platform-browser": "*",
     "@effect/rpc": "*",
@@ -56,6 +55,7 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tabler/icons-react": "^3.34.1",
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-form": "1.2.2",
@@ -67,6 +67,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "color": "^5.0.2",
     "date-fns": "^4.1.0",
     "effect": "*",
     "embla-carousel-react": "^8.6.0",
@@ -93,6 +94,7 @@
     "@tanstack/router-plugin": "^1.102.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@types/color": "^4.2.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
