adding grh panels on the right and many other things

--- a/apps/my-artist-type/database/package.json
+++ b/apps/my-artist-type/database/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "pg": "8.13.1",
     "effect": "*",
+    "@core/domain": "workspace:^",
     "@effect/platform": "*",
     "@effect/platform-node": "*",
     "@effect/sql": "*",
