resolving all build steps

--- a/apps/my-artist-type/domain/package.json
+++ b/apps/my-artist-type/domain/package.json
@@ -10,9 +10,15 @@
     "directory": "apps/my-artist-type/domain"
   },
   "exports": {
-    ".": "./src/index.ts",
+    ".": {
+      "default": "./src/index.ts",
+      "production": "./build/esm/index.js"
+    },
     "./package.json": "./package.json",
-    "./*": "./src/*.ts"
+    "./*": {
+      "default": "./src/*.ts",
+      "production": "./build/esm/*.js"
+    }
   },
   "scripts": {
     "build": "tsc -b tsconfig.build.json",
