--- a/packages/core/domain/package.json
+++ b/packages/core/domain/package.json
@@ -11,9 +11,15 @@
     "directory": "packages/core/domain"
   },
   "exports": {
-    ".": "./src/index.ts",
+    ".": {
+      "default": "./src/index.ts",
+      "production": "./build/esm/index.js"
+    },
     "./package.json": "./package.json",
-    "./*": "./src/*.ts"
+    "./*": {
+      "default": "./src/*.ts",
+      "production": "./build/esm/*.js"
+    }
   },
   "scripts": {
     "build": "tsc -b tsconfig.build.json",
