--- a/packages/features/quiz/tsconfig.src.json
+++ b/packages/features/quiz/tsconfig.src.json
@@ -11,8 +11,8 @@
     "jsx": "react-jsx",
     "lib": ["ES2021", "DOM", "DOM.Iterable"],
     "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "allowImportingTsExtensions": false,
     "verbatimModuleSyntax": true,
     "isolatedModules": true,
