--- a/packages/core/client/package.json
+++ b/packages/core/client/package.json
@@ -9,13 +9,19 @@
     "directory": "packages/core/client"
   },
   "exports": {
-    ".": "./src/index.ts",
+    ".": {
+      "production": "./build/esm/index.js",
+      "default": "./src/index.ts"
+    },
     "./package.json": "./package.json",
-    "./*": "./src/*.ts"
+    "./*": {
+      "production": "./build/esm/*.js",
+      "default": "./src/*.ts"
+    }
   },
   "scripts": {
     "dev": "dotenv -e ../../.env vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b tsconfig.build.json",
     "lint": "eslint .",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
