--- a/apps/my-artist-type/web/package.json
+++ b/apps/my-artist-type/web/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "dotenv -e ../../../.env vite",
-    "build": "NODE_ENV=production tsc -b && vite build",
+    "build": "NODE_ENV=production tsc -b && NODE_ENV=production vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
