--- a/apps/my-artist-type/web/package.json
+++ b/apps/my-artist-type/web/package.json
@@ -14,20 +14,17 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@core/client": "workspace:^",
     "@effect-atom/atom-react": "*",
     "@effect/platform": "*",
     "@effect/platform-browser": "*",
     "@effect/rpc": "*",
     "@faker-js/faker": "^10.0.0",
+    "@features/quiz": "workspace:^",
     "@headlessui/react": "^2.2.1",
     "@hookform/resolvers": "^5.2.1",
-    "@features/quiz": "workspace:^",
     "@my-artist-type/domain": "workspace:^",
-    "react-wrap-balancer": "^1.1.1",
     "@my-artist-type/server": "workspace:^",
-    "@core/client": "workspace:^",
-    "@ui/shadcn": "workspace:^",
-    "@ui/aceternity": "workspace:^",
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-form": "1.2.2",
@@ -36,6 +33,9 @@
     "@tanstack/react-start": "^1.131.27",
     "@tanstack/react-store": "^0.7.0",
     "@tanstack/react-table": "^8.21.2",
+    "@ui/aceternity": "workspace:^",
+    "@ui/shadcn": "workspace:^",
+    "clsx": "^2.1.1",
     "effect": "*",
     "lucide-react": "^0.469.0",
     "motion": "^12.18.1",
@@ -43,6 +43,8 @@
     "react-day-picker": "^9.9.0",
     "react-dom": "19.0.0",
     "react-resizable-panels": "^3.0.5",
+    "react-wrap-balancer": "^1.1.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
